# WiredTogether

./: .gitignore  LICENSE  PHASE_PLAN.md  README.md  README_CHECKPOINTING.md  README_RLVR.md  bash.exe.stackdump  environment.yml  pyproject.toml
.claude/: settings.local.json
configs/rlvr/: README.md  grpo_hebbian_composition.yaml  grpo_hebbian_diffusion.yaml  grpo_hebbian_full.yaml  grpo_multi_agent.yaml  grpo_single_agent_ch3.yaml
docs/: WiredTogether_arch.drawio.xml  architecture.drawio  architecture.md  architecture_mindforge_rl.md  five_chambers.drawio.xml  five_chambers_plan.md  hebbian_implementation.xlsx  rl_approaches.md  rl_layer.drawio  rlvr_grpo_plan.md
docs/diagrams/: five_chambers_structure.drawio
initial_rl_experiments/docs/: MVP_QUICKSTART.md  ROLE_SYSTEM_DESIGN.md
initial_rl_experiments/scripts/: fix_craftium_cluster.sh  mappo_lstm_train.py  mappo_train.py  prepare_wsl_run.sh  single_agent_test.py  test_roles_mvp.py
scripts/: aggregate_seeds.py  analyze_runs.py  chain_jobs.sh  compare_modes.py  grpo.sh  llm_server.py  mappo_ic3net_train.py  mappo_train.py  mindforge_slurm.sh  mindforge_slurm_thinking.sh  multi_agent_test.py  rl.sh  rl_gatherers.sh  rl_hebbian.sh  rl_hebbian_gatherers.sh  rl_hebbian_survival.sh  rl_token_opt.sh  run_continue.sh  run_first.sh  single_agent_test.py  small.sh  sync_craftium.sh  test.sh  test_milestones.sh  test_openworld.py
scripts/analysis/: analyze_graph_topology.py  plot_bond_asymmetry.py
scripts/experiments/: E10c_6agents_hebbian.sh  E10d_6agents_no_hebbian.sh  E10e_9agents_hebbian.sh  (+17 more)
tests/: conftest.py
(+162 files in other folders)
