[tool.poetry]
name = "WiredTogether"
version = "0.1.0"
description = "Multi-agent reinforcement learning in Craftium"
authors = ["Ana Cristiana Marcu"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
pettingzoo = "^1.24.3"
torch = "^2.1.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
scipy = "^1.11.0"
networkx = "^3.2"
hydra-core = "^1.3.2"
rich = "^13.7.0"
loguru = "^0.7.2"
wandb = "^0.16.0"
tensorboard = "^2.15.0"
tqdm = "^4.66.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
imageio = {extras = ["ffmpeg"], version = "^2.33.0"}
opencv-python = "^4.9.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
